--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,6 +143,7 @@ nav:
           - 直流刷式电机: Robot/motor_control/dc_motor_driver_chip.md
           - 步进电机: Robot/motor_control/stepper_motor_driver_chip.md
           - STM32控制42步进电机: Robot/motor_control/stm32_io_drive_42stepper_l298n.md
+          - P_NUCLEO_IHM001 Getting Start: Robot/motor_control/P_NUCLEO_IHM001_Getting_Start.md 
 
         - 平衡车: Robot/two_wheel_balance_car.md
 
