--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,8 @@ nav:
         - 开发环境相关: 
           - QEMU:
             - QEMU安装: Embedded System/linux/embedded_linux_dev_env/qemu/qemu_install.md
+          - Ubuntu软件源设置: Embedded System/linux/embedded_linux_dev_env/ubuntu_change_sw_source.md
+          - Ubuntu系统使用配置: Embedded System/linux/embedded_linux_dev_env/ubuntu_configure.md
           - WSL与Windows共享文件: Embedded System/linux/embedded_linux_dev_env/wsl_shared_folder.md
           - VirtualBox开发环境搭建: Embedded System/linux/embedded_linux_dev_env/virtual_box_env.md
           - Ubuntu中构建内核源码树: Embedded System/linux/embedded_linux_dev_env/build_linux_source_tree_on_ubuntu.md
