--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -314,6 +314,7 @@ nav:
         - MAX17261电量计: Hardware/max17261.md
       - SolidWorks:
         - Soldworks启动错误No_License: Solidworks/crack/no_license_startup.md
+        - Solidworks 2021安装教程: Solidworks/install/solidworks2021_install.md
 
       
 
