--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ nav:
               - Bluetooth Base: Embedded System/MCU/wireless/bluetooth/bluetooth_base.md
               - Bluetooth Stack: Embedded System/MCU/wireless/bluetooth/protocal_stack.md
             - UWB:
+              - UWB物理层: Embedded System/MCU/wireless/UWB/uwb_physical_layer.md
               - UWB测距算法: Embedded System/MCU/wireless/UWB/uwb_Ranging_Techniques.md
               - UWB定位算法: Embedded System/MCU/wireless/UWB/uwb_location_algorithm.md
         
