--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,7 @@ nav:
 
         - Wireless:
             - Bluetooth:
+              - BLE安全: Embedded System/MCU/wireless/bluetooth/ble_sm.md
               - Bluetooth Base: Embedded System/MCU/wireless/bluetooth/bluetooth_base.md
               - Bluetooth Stack: Embedded System/MCU/wireless/bluetooth/protocal_stack.md
             - UWB:
@@ -140,6 +141,7 @@ nav:
           - Moveit Getting Start: Robot/moveit/moveit_getting_start.md
 
         - Motor Control: 
+          - SVPWM: Robot/motor_control/svpwm.md
           - 转矩: Robot/motor_control/torque.md
           - 无刷电机: Robot/motor_control/brushless_motor.md
           - 直流刷式电机: Robot/motor_control/dc_motor_driver_chip.md
