--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -322,6 +322,7 @@ nav:
         - USB-PD: Hardware/ubs_pd.md
         - TPS65987D: Hardware/TPS65987D.md
         - MAX17261电量计: Hardware/max17261.md
+        - 电感铺地: Hardware/inductance_gnd.md
       - SolidWorks:
         - Soldworks启动错误No_License: Solidworks/crack/no_license_startup.md
         - Solidworks 2021安装教程: Solidworks/install/solidworks2021_install.md
