--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -190,6 +190,7 @@ nav:
         - 开发环境相关: 
           - QEMU:
             - QEMU安装: Embedded System/linux/embedded_linux_dev_env/qemu/qemu_install.md
+          - VMware: Embedded System/linux/embedded_linux_dev_env/vmware.md
           - Ubuntu软件源设置: Embedded System/linux/embedded_linux_dev_env/ubuntu_change_sw_source.md
           - Ubuntu系统使用配置: Embedded System/linux/embedded_linux_dev_env/ubuntu_configure.md
           - WSL与Windows共享文件: Embedded System/linux/embedded_linux_dev_env/wsl_shared_folder.md
