--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,9 @@ nav:
 
         - Wireless:
             - Bluetooth:
+              - CC2642_Getting_Start: Embedded System/MCU/wireless/bluetooth/CC2642/CC2642_Getting_Start.md
+              - CC2642 OAD: Embedded System/MCU/wireless/bluetooth/CC2642/CC2642_OAD.md
+              - BLE地址: Embedded System/MCU/wireless/bluetooth/BLE_Address.md
               - BLE安全: Embedded System/MCU/wireless/bluetooth/ble_sm.md
               - Bluetooth Base: Embedded System/MCU/wireless/bluetooth/bluetooth_base.md
               - Bluetooth Stack: Embedded System/MCU/wireless/bluetooth/protocal_stack.md
