--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -343,6 +343,8 @@ nav:
       
 
     - Tools:
+      - IAR:
+        - IAR Projection Connection: Tools/IAR/iar_project_connection.md
       - 电脑使用问题:
         - 安装Windows11系统: Tools/reinstall_pc_os/install_win11.md
         - 文件关联的启动程序错误: Tools/about_pc/pc_file_associated_porgram_error.md
